--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -47,6 +47,8 @@
   color: black;
   font-size: 25px;
   border-bottom: 1px solid #dfdfdf;
+  font-family: 'museo_sans500', serif;
+  font-weight: bold;
 }
 
 header {
@@ -55,4 +57,14 @@ header {
 
 hr {
   clear:both;
+}
+
+h1 {
+  font-family: 'museo_sans500', serif;
+  font-weight: bold;
+  font-size: 48px;
+}
+
+h2 {
+  font-family: 'museo_sans500', serif;
 }
