--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,23 @@
 
     <br class="clear" />
 
-    <%= yield %>
-  
+    <div class="container">
+      <%= yield %>
+    </div>
+
+    <div class="footer">
+      <div class="container">
+        <div class=row>
+          <div class="col-6">
+            <%= link_to "This isn't enough, I need more.", "#", class: 'next-quote' %>
+          </div>
+          <div class="col-6 footer blurb">
+            Proudly hacked in Los Angeles, CA by Shelly Chen.<br />
+            Want to build your own Splurty Web App? <a href="http://thefirehoseproject.com">Learn how to code here.</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
