--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,20 +10,22 @@
   <body>
     <header class="row">
       <div class="col-3">
-        <div class="circle">
-          <br />
-          DOGGOS
-          <br />
-          DOGGOS
-          <br />
-          DOGGOS
-        </div>
+        <%= link_to root_path, class: 'logo' do %>
+          <div class="circle">
+            <br />
+            DOGGOS
+            <br />
+            DOGGOS
+            <br />
+            DOGGOS
+          </div>
+        <% end %>
       </div>
       <div class="col-4 slogan">
         Human's best friend.
       </div>
       <div class="col-5 links">
-        <%= link_to 'Contribute', '#' %>
+        <%= link_to 'Contribute', new_quote_path %>
         <%= link_to 'About', '#' %>
       </div>
     </header>
@@ -40,7 +42,7 @@
       <div class="container">
         <div class=row>
           <div class="col-6">
-            <%= link_to "This isn't enough, I need more.", "#", class: 'next-quote' %>
+            <%= link_to "This isn't enough, I need more.", root_path, class: 'next-quote' %>
           </div>
           <div class="col-6 footer blurb">
             Proudly hacked in Los Angeles, CA by Shelly Chen.<br />
