--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
       </div>
       <div class="col-5 links">
         <%= link_to 'Contribute', new_quote_path %>
-        <%= link_to 'About', '#' %>
+        <%= link_to 'About', about_path %>
       </div>
     </header>
 
@@ -47,7 +47,7 @@
       <div class="container">
         <div class=row>
           <div class="col-6">
-            <%= link_to "This isn't enough, I need more.", root_path, class: 'next-quote' %>
+            <%= link_to "Bork! Another!", root_path, class: 'next-quote' %>
           </div>
           <div class="col-6 footer blurb">
             Proudly hacked in Los Angeles, CA by Shelly Chen.<br />
