--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,6 +1,6 @@
 <h2>
   <span>QUOTE / No. <%= @quote.id %></span>
-  Here's another reason dogs are the best!
+  &nbsp;ˁ˚ᴥ˚ˀ
 </h2>
 
 <h1><%= @quote.saying %></h1>
