--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -1,10 +1,10 @@
 <div class="col-10 offset-1 about">
   <h1>About Noodle's Quote Generator</h1>
 
-  <p>Noodle's Quote Generator is the first web application built by Shelly Chen. Shelly is an aspiring web developer and the proud mom of <a href="https://instagram.com/the_noodz">Noodle the Dog</a>.
+  <p>Noodle's Quote Generator is the first web application built by Shelly Chen. Shelly is an aspiring web developer and the proud mom of <a href="https://instagram.com/the_noodz" target="_blank">Noodle the Dog</a>.
   </p>
   <br>
-  <p>If you want to learn how to code - start <a target="_blank" href="http://www.thefirehoseproject.com/"> here</a>.
+  <p>If you want to learn how to code - start <a target="_blank" href="http://www.thefirehoseproject.com/" target="_blank">here</a>.
   </p>
 
    <div class="row">
