--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -78,8 +78,8 @@
             <%= link_to "Bork! Another!", root_path, class: 'next-quote' %>
           </div>
           <div class="col-12 col-sm-6 footer blurb">
-            Proudly hacked in Los Angeles, CA by Shelly Chen.<br />
-            Want to build your own Splurty Web App? <a href="http://thefirehoseproject.com">Learn how to code here.</a>
+            Proudly hacked in Los Angeles, CA by <a href="https://github.com/shllychn" target="_blank">Shelly Chen</a>.<br />
+            Want to build your own Splurty Web App? <a href="http://thefirehoseproject.com" target="_blank">Learn how to code here.</a>
           </div>
         </div>
       </div>
